[package]
name = "fruity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.8"
rcas = { git = "https://github.com/nw-rs/rcas" }

[profile.release]
opt-level = "z"
codegen-units = 1
debug = 0
lto = "fat"
panic = "abort"
